--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 
     <body>
         <div id="main">
-
             <div id="header">
+            <!-- Done Header -->
+                <!-- Navigation -->
                 <ul id="nav">
                     <li><a href="">Home</a></li>
                     <li><a href="">Band</a></li>
@@ -19,7 +20,7 @@
                     <li>
                         <a href="">
                             More
-                            <i class = "down ti-angle-down"> </i>
+                            <div class = "subnav-down ti-angle-down"> </div>
                         </a>
                         <ul class="subnav">
                             <li><a href="">Merchandise</a></li>
@@ -28,8 +29,12 @@
                         </ul>
                     </li>
                 </ul>
-            </div>
-
+                <!-- Button Search -->
+                <div class = "search-btn">
+                    <i class = "search-icon ti-search"> </i>    
+                </div>
+            <!-- Done Header -->
+                </div>
             <div id="slider">
 
             </div>
