--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="./assets/css/style.css">
         <link rel="stylesheet" href="./assets/themify-icons/themify-icons.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     </head>
 
     <body>
         <div id="main">
             <div id="header">
-            <!-- Done Header -->
-                <!-- Navigation -->
                 <ul id="nav">
                     <li><a href="">Home</a></li>
                     <li><a href="">Band</a></li>
@@ -29,18 +30,97 @@
                         </ul>
                     </li>
                 </ul>
-                <!-- Button Search -->
                 <div class = "search-btn">
                     <i class = "search-icon ti-search"> </i>    
                 </div>
-            <!-- Done Header -->
+
                 </div>
             <div id="slider">
-
+                <div class="text-slider">
+                    <h2> Chicago </h2>
+                    <h5> Thank you, Chicago - A night we won't forget.</h5>
+                </div>
             </div>
-
             <div id="content">
-
+                <div class="about">
+                    <div class="content-section">
+                        <h2 class="section-heading">
+                            THE BAND
+                        </h2>
+                        <p class="section-sub-heading">
+                            We love music
+                        </p>
+                        <p class="about-text">
+                            We have created a fictional band website. 
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.                    
+                        </p>
+                        <div class="member-list">
+                            <div class="member-item">
+                                <p class="member-name"> Name </p>
+                                <img src="/assets/img/about/bandmember.jpg" alt="">
+                            </div>
+                            <div class="member-item">
+                                <p class="member-name"> Name </p>
+                                <img src="/assets/img/about/bandmember.jpg" alt="">
+                            </div>
+                            <div class="member-item">
+                                <p class="member-name"> Name </p>
+                                <img src="/assets/img/about/bandmember.jpg" alt="">
+                            </div>
+                            <div class="clear"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="tour">
+                    <div class="content-section">
+                        <h2 class="section-heading">
+                            TOUR DATES
+                        </h2>
+                        <p class="section-sub-heading">
+                            Remember to book your tickets!
+                        </p>
+                        <br>
+                        <ul class = "book-ticket">
+                            <li class="text">September <span class = "sold-out">Sold out</span> </li>
+                            <li class="text">October <span class = "sold-out">Sold out</span> </li>
+                            <li class="text">November <span class = "none">3 </span></li>
+                        </ul>
+                        <div class="tour-place-list">
+                            <div class="tour-place-item">
+                                <img src="assets/img/tour-place/newyork.jpg" alt="">
+                                <div>
+                                    <h3 class ="place">New York</h3>
+                                    <p class ="time">Fri 27 Nov 2016</p>
+                                    <p class ="desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+                                    <a href="" class ="place-buy-tickets"> Buy Tickets</a>
+                                </div>
+                            </div>
+                            <div class="tour-place-item">
+                                <img src="assets/img/tour-place/paris.jpg" alt="">
+                                <div>
+                                    <h3 class ="place">Paris</h3>
+                                    <p class ="time">Sat 28 Nov 2016</p>
+                                    <p class ="desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+                                    <a href="" class ="place-buy-tickets"> Buy Tickets</a>
+                                </div>
+                            </div>
+                            <div class="tour-place-item">
+                                <img src="assets/img/tour-place/sanfran.jpg" alt="">
+                                <div>
+                                    <h3 class ="place">San Francisco</h3>
+                                    <p class ="time">Sun 29 Nov 2016</p>
+                                    <p class ="desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+                                    <a href="" class ="place-buy-tickets"> Buy Tickets</a>
+                                </div>
+                            </div> 
+                            <div class="clear"></div>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <div id="footer">
