--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
                 </div>
             <div id="slider">
-                <div class="text-slider">
+                <div class="text-slider text-center">
                     <h2> Chicago </h2>
                     <h5> Thank you, Chicago - A night we won't forget.</h5>
                 </div>
@@ -58,16 +58,16 @@
                             Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
                             Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.                    
                         </p>
-                        <div class="member-list">
-                            <div class="member-item">
+                        <div class="member-list row">
+                            <div class="member-item col col-third text-center">
                                 <p class="member-name"> Name </p>
                                 <img src="/assets/img/about/bandmember.jpg" alt="">
                             </div>
-                            <div class="member-item">
+                            <div class="member-item col col-third text-center">
                                 <p class="member-name"> Name </p>
                                 <img src="/assets/img/about/bandmember.jpg" alt="">
                             </div>
-                            <div class="member-item">
+                            <div class="member-item col col-third text-center">
                                 <p class="member-name"> Name </p>
                                 <img src="/assets/img/about/bandmember.jpg" alt="">
                             </div>
@@ -121,10 +121,63 @@
                         </div>
                     </div>
                 </div>
+                <div class="contact">
+                    <div class="content-section">
+                        <h2 class="section-heading">
+                            CONTACT
+                        </h2>
+                        <p class="section-sub-heading">
+                            Fan? Drop a note!
+                        </p>
+                        <div class="row-none">
+                            <ul class="list-contact col col-half">
+                                <li class="item-contact ti-location-arrow">
+                                    <p> Chicago, US </p>
+                                </li>
+                                <li class="item-contact ti-mobile">
+                                     <p> Phone: +00 151515 </p>
+                                </li>
+                                <li class="item-contact ti-email">
+                                    <p> Email: mail@mail.com</p>
+                                </li>
+                                <div class="clear"></div>
+                            </ul>
+                            <div class="col-none-padding col-half" style="display: inline-block;">
+                                <div class="row-none" style = "margin-bottom: 8px;">
+                                    <div class="col-none-padding col-half input-row1" style="margin-left: -8px; padding-right: 8px;">
+                                        <input type="text" placeholder="Name" class ="form-info" required> 
+                                    </div>
+                                    <div class="col-none-padding col-half input-row1" style="margin-right: -8px; padding-left: 8px;">
+                                        <input type="text" placeholder="Email" class ="form-info" required>
+                                    </div>
+                                </div>
+                                <div class="row-none">
+                                    <div class="col-none-padding col-full input-row2" style="margin-left: -8px;">
+                                        <input type="text" placeholder="Message" class ="form-info" required>
+                                    </div>
+                                </div>
+                            </div>
+                            <button style="margin: 16px 0px; padding: 8px 16px; border: 0px; float : right"> SEND </button>
+                            <div class="clear"></div>
+                        </div>
+                    </div>
+                </div>
             </div>
-
-            <div id="footer">
-
+            <div class="map-section">
+                <img src="assets/img/map/map.jpg" alt="" style="width: 100%; margin-top: 32px;">
+            </div>
+            <div id="footer" style="padding: 64px 16px; color: #757575;" class = "text-center">
+                <div class="social">
+                    <a href="" class = "ti-facebook"></a>
+                    <a href="" class = "ti-instagram"></a>
+                    <a href="" class = "ti-github"></a>
+                    <a href="" class = "ti-pinterest"></a>
+                    <a href="" class = "ti-twitter"></a>
+                    <a href="" class = "ti-linkedin"></a>
+                </div>
+                <p style="margin-top: 15px; margin-bottom: 15px;">
+                    Powered by <a href="https://www.w3schools.com/" style="color: #757575;"> w3.css </a>
+                </p>
             </div>
         </div>
     </body>
