--- a/index.html
+++ b/index.html
@@ -142,22 +142,28 @@
                                 </li>
                                 <div class="clear"></div>
                             </ul>
-                            <div class="col-none-padding col-half" style="display: inline-block;">
+                            <div class="col-none-padding col-half" style = "margin-left: -8px;">
                                 <div class="row-none" style = "margin-bottom: 8px;">
-                                    <div class="col-none-padding col-half input-row1" style="margin-left: -8px; padding-right: 8px;">
+                                    <div class="col-none-padding col-half input-row1" 
+                                        style="padding-right: 8px;"
+                                    >
                                         <input type="text" placeholder="Name" class ="form-info" required> 
                                     </div>
-                                    <div class="col-none-padding col-half input-row1" style="margin-right: -8px; padding-left: 8px;">
+                                    <div class="col-none-padding col-half input-row1" 
+                                        style="padding-left: 8px;"
+                                    >
                                         <input type="text" placeholder="Email" class ="form-info" required>
                                     </div>
                                 </div>
                                 <div class="row-none">
-                                    <div class="col-none-padding col-full input-row2" style="margin-left: -8px;">
+                                    <div class="col-none-padding col-full input-row2" 
+                                    style=""
+                                >
                                         <input type="text" placeholder="Message" class ="form-info" required>
                                     </div>
                                 </div>
                             </div>
-                            <button style="margin: 16px 0px; padding: 8px 16px; border: 0px; float : right"> SEND </button>
+                            <button style="margin: 16px 8px 16px 0px; padding: 8px 16px; border: 0px; float : right"> SEND </button>
                             <div class="clear"></div>
                         </div>
                     </div>
