--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                                 </li>
                                 <div class="clear"></div>
                             </ul>
-                            <div class="col-none-padding col-half" style = "margin-left: -8px;">
+                            <div class="col-none-padding col-half">
                                 <div class="row-none" style = "margin-bottom: 8px;">
                                     <div class="col-none-padding col-half input-row1" 
                                         style="padding-right: 8px;"
@@ -163,7 +163,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <button style="margin: 16px 8px 16px 0px; padding: 8px 16px; border: 0px; float : right"> SEND </button>
+                            <button style="margin: 16px 0px; padding: 8px 16px; border: 0px; float : right"> SEND </button>
                             <div class="clear"></div>
                         </div>
                     </div>
