--- a/index.html
+++ b/index.html
@@ -144,21 +144,15 @@
                             </ul>
                             <div class="col-none-padding col-half">
                                 <div class="row-none" style = "margin-bottom: 8px;">
-                                    <div class="col-none-padding col-half input-row1" 
-                                        style="padding-right: 8px;"
-                                    >
+                                    <div class="col-none-padding col-half input-row1" style="padding-right: 8px;">
                                         <input type="text" placeholder="Name" class ="form-info" required> 
                                     </div>
-                                    <div class="col-none-padding col-half input-row1" 
-                                        style="padding-left: 8px;"
-                                    >
+                                    <div class="col-none-padding col-half input-row1" style="padding-left: 8px;">
                                         <input type="text" placeholder="Email" class ="form-info" required>
                                     </div>
                                 </div>
                                 <div class="row-none">
-                                    <div class="col-none-padding col-full input-row2" 
-                                    style=""
-                                >
+                                    <div class="col-none-padding col-full input-row2">
                                         <input type="text" placeholder="Message" class ="form-info" required>
                                     </div>
                                 </div>
