--- a/index.html
+++ b/index.html
@@ -180,5 +180,41 @@
                 </p>
             </div>
         </div>
+        <link rel="stylesheet" href="./assets/css/modal.css">
+        <div class="modal">
+            <div class="header">
+                <button class="button-close"> X </button>
+                <div class="ti-briefcase content-header text-center"> 
+                    Tickets 
+                </div>
+            </div>
+            <div class="container">
+                <div class="modal-content">
+                    <div class="head-modal-content ti-money" style="margin: 15px 0px;">
+                        <p> 
+                        Tickets, $15 per person 
+                        </p>  
+                    </div>
+                    <input type="text" placeholder="How many?">
+                    <div class="head-modal-content ti-email" style="margin: 15px 0px;">
+                        <p> 
+                        Send To
+                        </p>  
+                    </div>
+                    <input type="text" placeholder="Enter email?">
+                    <button class="pay">
+                        PAY <span class ="ti-check modal-pay"></span>
+                    </button> 
+                </div>
+            </div>
+            <div class="footer" style="padding: 0px 16px;">
+                <button class="close">
+                    Close <span class ="ti-close"></span>
+                    <div class="clear"></div>
+                </button>
+                <p> Need <a href=""> help? </a> </p>
+                <div class="clear"></div>
+            </div> 
+        </div>
     </body>
 </html>
