--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                                     <h3 class ="place">New York</h3>
                                     <p class ="time">Fri 27 Nov 2016</p>
                                     <p class ="desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                                    <a href="" class ="place-buy-tickets"> Buy Tickets</a>
+                                    <button class ="place-buy-tickets js-buy-ticket"> Buy Tickets</button>
                                 </div>
                             </div>
                             <div class="tour-place-item">
@@ -105,7 +105,7 @@
                                     <h3 class ="place">Paris</h3>
                                     <p class ="time">Sat 28 Nov 2016</p>
                                     <p class ="desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                                    <a href="" class ="place-buy-tickets"> Buy Tickets</a>
+                                    <button class ="place-buy-tickets js-buy-ticket"> Buy Tickets</button>
                                 </div>
                             </div>
                             <div class="tour-place-item">
@@ -114,7 +114,7 @@
                                     <h3 class ="place">San Francisco</h3>
                                     <p class ="time">Sun 29 Nov 2016</p>
                                     <p class ="desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                                    <a href="" class ="place-buy-tickets"> Buy Tickets</a>
+                                    <button class ="place-buy-tickets js-buy-ticket"> Buy Tickets</button>
                                 </div>
                             </div> 
                             <div class="clear"></div>
@@ -181,40 +181,44 @@
             </div>
         </div>
         <link rel="stylesheet" href="./assets/css/modal.css">
-        <div class="modal">
-            <div class="header">
-                <button class="button-close"> X </button>
-                <div class="ti-briefcase content-header text-center"> 
-                    Tickets 
-                </div>
-            </div>
-            <div class="container">
-                <div class="modal-content">
-                    <div class="head-modal-content ti-money" style="margin: 15px 0px;">
-                        <p> 
-                        Tickets, $15 per person 
-                        </p>  
-                    </div>
-                    <input type="text" placeholder="How many?">
-                    <div class="head-modal-content ti-email" style="margin: 15px 0px;">
-                        <p> 
-                        Send To
-                        </p>  
-                    </div>
-                    <input type="text" placeholder="Enter email?">
-                    <button class="pay">
-                        PAY <span class ="ti-check modal-pay"></span>
-                    </button> 
-                </div>
-            </div>
-            <div class="footer" style="padding: 0px 16px;">
-                <button class="close">
-                    Close <span class ="ti-close"></span>
+        <div id = "style-modal">
+            <div class="modal">
+                <div class="header">
+                    <button class="button-close"> X </button>
                     <div class="clear"></div>
-                </button>
-                <p> Need <a href=""> help? </a> </p>
-                <div class="clear"></div>
-            </div> 
+                    <div class="ti-briefcase content-header text-center"> 
+                        Tickets 
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="modal-content">
+                        <div class="head-modal-content ti-money" style="margin: 15px 0px;">
+                            <p> 
+                            Tickets, $15 per person 
+                            </p>  
+                        </div>
+                        <input type="text" placeholder="How many?">
+                        <div class="head-modal-content ti-email" style="margin: 15px 0px;">
+                            <p> 
+                            Send To
+                            </p>  
+                        </div>
+                        <input type="text" placeholder="Enter email?">
+                        <button class="pay">
+                            PAY <span class ="ti-check modal-pay"></span>
+                        </button> 
+                    </div>
+                </div>
+                <div class="footer" style="padding: 0px 16px;">
+                    <button class="close">
+                        Close <span class ="ti-close"></span>
+                        <div class="clear"></div>
+                    </button>
+                    <p> Need <a href="" style = "color: #2196F3 !important;"> help? </a> </p>
+                    <div class="clear"></div>
+                </div> 
+            </div>
         </div>
+        <script src="/main.js"></script>
     </body>
 </html>
