--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
         <div id="main">
             <div id="header">
                 <ul id="nav">
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Band</a></li>
-                    <li><a href="">Tour</a></li>
-                    <li><a href="">Contact</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#band">Band</a></li>
+                    <li><a href="#tour">Tour</a></li>
+                    <li><a href="#contact">Contact</a></li>
                     <li>
-                        <a href="">
+                        <a href="#">
                             More
                             <div class = "subnav-down ti-angle-down"> </div>
                         </a>
                         <ul class="subnav">
-                            <li><a href="">Merchandise</a></li>
-                            <li><a href="">Extras</a></li>
-                            <li><a href="">Media</a></li>
+                            <li><a href="#">Merchandise</a></li>
+                            <li><a href="#">Extras</a></li>
+                            <li><a href="#">Media</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -42,7 +42,7 @@
                 </div>
             </div>
             <div id="content">
-                <div class="about">
+                <div id = "band" class="about">
                     <div class="content-section">
                         <h2 class="section-heading">
                             THE BAND
@@ -75,7 +75,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="tour">
+                <div id = "tour" class="tour">
                     <div class="content-section">
                         <h2 class="section-heading">
                             TOUR DATES
@@ -121,7 +121,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="contact">
+                <div id = "contact" class="contact">
                     <div class="content-section">
                         <h2 class="section-heading">
                             CONTACT
@@ -157,7 +157,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <button style="margin: 16px 0px; padding: 8px 16px; border: 0px; float : right"> SEND </button>
+                            <button style="margin: 16px 0px; padding: 8px 16px; border: 0px; float : right; cursor: pointer;"> SEND </button>
                             <div class="clear"></div>
                         </div>
                     </div>
@@ -176,7 +176,7 @@
                     <a href="" class = "ti-linkedin"></a>
                 </div>
                 <p style="margin-top: 15px; margin-bottom: 15px;">
-                    Powered by <a href="https://www.w3schools.com/" style="color: #757575;"> w3.css </a>
+                    Powered by <a href="https://www.w3schools.com/" style="color: #757575;" rel="noreferrer noopener"target> w3.css </a>
                 </p>
             </div>
         </div>
