--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
     <head>
         <title> The Band </title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="./assets/css/style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./assets/themify-icons/themify-icons.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="./assets/css/style.css">
+        <link rel="stylesheet" href="./assets/css/responsive.css">
     </head>
 
     <body>
@@ -24,17 +26,23 @@
                             <div class = "subnav-down ti-angle-down"> </div>
                         </a>
                         <ul class="subnav">
-                            <li><a href="#">Merchandise</a></li>
-                            <li><a href="#">Extras</a></li>
-                            <li><a href="#">Media</a></li>
+                            <li><a href="">Merchandise</a></li>
+                            <li><a href="">Extras</a></li>
+                            <li><a href="">Media</a></li>
                         </ul>
                     </li>
                 </ul>
                 <div class = "search-btn">
                     <i class = "search-icon ti-search"> </i>    
                 </div>
-
+                <div class="mobile-menu">
+                    <i class = "ti-menu"></i>
                 </div>
+            </div>
+            <script>
+                var getWidthOfBody = screen.width;
+                document.getElementById('header').style.width = getWidthOfBody + 'px';
+            </script>
             <div id="slider">
                 <div class="text-slider text-center">
                     <h2> Chicago </h2>
